ch: fix overflow

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -5,3 +5,9 @@
 .main-navbar a {
     color: #fff !important;
 }
+
+.navbar-toggler:focus {
+    border: none !important;
+    color: transparent !important;
+    background: transparent !important;
+}
